// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match its "blue" theme snapshot 1`] = `
<button
  className="sc-bdVaJa hNxhfV"
/>
`;

exports[`<Button /> should match its "gray" theme snapshot 1`] = `
<button
  className="sc-bdVaJa bnyzNl"
/>
`;

exports[`<Button /> should match its "grayCondensed" theme snapshot 1`] = `
<button
  className="sc-bdVaJa hZiCOk"
/>
`;

exports[`<Button /> should match its "green" theme snapshot 1`] = `
<button
  className="sc-bdVaJa kbTvbY"
/>
`;

exports[`<Button /> should match its "whiteBlue" theme snapshot 1`] = `
<button
  className="sc-bdVaJa bqdzO"
/>
`;

exports[`<Button /> should match its "whiteGray" theme snapshot 1`] = `
<button
  className="sc-bdVaJa bVFeIM"
/>
`;

exports[`<Button /> should match its empty snapshot 1`] = `
<button
  className="sc-bdVaJa edtxyx"
/>
`;
